--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,10 @@
         "name": "C++ Launch",
         "type": "cppdbg",
         "request": "launch",
-        "program": "/home/joaoalme/Projetcs42/CPP09/ex01/a.out", // Update this with your compiled executable path
-        "args": ["7 7 * 7 -"],
+        "program": "/home/joaoalme/Projetcs42/CPP09/ex02/PmergeMe", // Update this with your compiled executable path
+        "args": ["23", "14", "2", "9", "12", "8", "87", "1", "7", "10"],
         "stopAtEntry": false,
-        "cwd": "/home/joaoalme/Projetcs42/CPP09/ex01",
+        "cwd": "/home/joaoalme/Projetcs42/CPP09/ex02",
         "environment": [],
         "externalConsole": false,
         "MIMode": "gdb",
